--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,8 @@
         "laravel/framework": "^6.20",
         "laravel/tinker": "^2.5",
         "laravel/ui": "1.*",
-        "league/flysystem-aws-s3-v3": "~1.0",
-        "league/flysystem-cached-adapter": "~1.0",
-        "laravel/ui": "1.*",
-        "laravel/ui": "1.*"
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "league/flysystem-cached-adapter": "~1.0"
     },
     "require-dev": {
         "facade/ignition": "^1.16.4",
